--- a/Granite House/Views/Shared/_Layout.cshtml
+++ b/Granite House/Views/Shared/_Layout.cshtml
@@ -19,26 +19,34 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Granite_House</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top ">
+            <a class="navbar-brand" href="#">Granite House</a>
+          
+
+            <div class="collapse navbar-collapse" >
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Product Types</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="navbar-nav mr-auto">
+                <partial name="_LoginPartial" />
             </div>
         </nav>
+
+
+
+        <!-- here is my code upwards -->
+
+
+
+
+
+
+
+
+        
     </header>
     <div class="container">
         <partial name="_CookieConsentPartial" />
