Special Tags as migration has been added

--- a/Granite House/Areas/Customer/Views/Home/Index.cshtml
+++ b/Granite House/Areas/Customer/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "S Home Page";
 }
 
+<div class="row">
+<h2 class="col-md-4 active align-content-md-center ">Inside the Customer Index page</h2>
+<h2 class="col-md-4 active align-content-md-center ">Inside the Customer Index page</h2>
+<h2 class="col-md-4 active align-content-md-center ">Inside the Customer Index page</h2>
+</div>
