--- a/Granite House/Areas/Admin/Views/SpecialTags/Edit.cshtml
+++ b/Granite House/Areas/Admin/Views/SpecialTags/Edit.cshtml
@@ -1,30 +1,27 @@
-﻿@model Granite_House.Models.ProductTypes ;
-
+﻿@model Granite_House.Models.SpecialTags
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = " Special Tag Edit";
 }
 
-
-
-<h2 class="text-info"> Edit a Specal Tag </h2>
+<h2 class="text-info"> Edit a product </h2>
 
 <form method="post" asp-action="Edit">
     <div class="p-4 border rounded">
-        <input type="hidden" asp-for="ID" />
+        <input type="hidden" asp-for="TagId" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group row">
             <div class="col-1">
-                <label asp-for="Name"> Name</label>
+                <label asp-for="TagName"> TagName</label>
             </div>
             <div class="col-5">
-                <input asp-for="Name" class="form-control " />
+                <input asp-for="TagName" class="form-control " />
             </div>
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <span asp-validation-for="TagName" class="text-danger"></span>
 
         </div>
         <br />
         <div class="form-group">
-            <input type="submit" class="btn btn-primary" asp-route-id="@Model.ID" value="Update" />
+            <input type="submit" class="btn btn-primary" asp-route-id="@Model.TagId" value="Update" />
             <a asp-action="Index" class="btn btn-success"> Back To list </a>
         </div>
     </div>
