all done before the create view of products

--- a/Granite House/Views/Shared/_Layout.cshtml
+++ b/Granite House/Views/Shared/_Layout.cshtml
@@ -35,6 +35,10 @@
                         <a class="nav-link" asp-area="Admin" asp-controller="SpecialTags" asp-action="Index">Special Tags</a>
                         <!-- asp-area="Admin" asp-controller="ProductTypes" asp-action="Index"-->
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Products" asp-action="Index">Products</a>
+                        <!-- asp-area="Admin" asp-controller="ProductTypes" asp-action="Index"-->
+                    </li>
                 </ul>
             </div>
             <div class="navbar-nav mr-auto">
