finally Product Types DropDown Worked

--- a/Granite House/Areas/Admin/Views/Home/Index.cshtml
+++ b/Granite House/Areas/Admin/Views/Home/Index.cshtml
@@ -2,3 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class="row">
+    <h2 class="col-md-4 active align-content-md-center ">Inside the Admin Index page</h2>
+    <h2 class="col-md-4 active align-content-md-center ">Inside the Admin Index page</h2>
+    <h2 class="col-md-4 active align-content-md-center ">Inside the Admin Index page</h2>
+</div>
+
