--- a/Granite House/Areas/Admin/Views/Products/Index.cshtml
+++ b/Granite House/Areas/Admin/Views/Products/Index.cshtml
@@ -11,6 +11,7 @@
     </div>
     <div class="col-6 text-right">
         <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; New Product </a>
+        <a asp-action="TestDropDown" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Test </a>
     </div>
 </div>
 
