--- a/Granite House/Areas/Admin/Views/Products/Create.cshtml
+++ b/Granite House/Areas/Admin/Views/Products/Create.cshtml
@@ -44,39 +44,50 @@
                 <label asp-for="ProductTypes"></label>
             </div>
             <div class="col-5">
-                <select asp-for="@Model.Products.ProductTypesId" asp-items="Model.selectLists" class="form-control"></select>
+                <select asp-for="@Model.Products.ProductTypesId" asp-items="Model.selectLists" class="form-control">
+                    <option value=""> Null</option>
+                </select>
             </div>
         </div>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="SpecialTags"></label>
-            </div>
-            <div class="col-5">
-
-            </div>
+        <div>
+        <span asp-validation-for="Products.ProductTypesId" class="text-danger"></span>
         </div>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="Products.ShadeColor"></label>
-            </div>
-            <div class="col-5">
-                <input asp-for="Products.ShadeColor" class="form-control" />
-            </div>
-            <span asp-validation-for="Products.ShadeColor" class="text-danger"></span>
+    <div class="form-group row">
+        <div class="col-2">
+            <label asp-for="SpecialTags"></label>
         </div>
-        <div class="form-group row">
-            <div class="col-2">
-                <label asp-for="Products.Available"></label>
-            </div>
-            <div class="col-5">
-                <input type="checkbox" asp-for="Products.Available" />
-            </div>
+        <div class="col-5">
+            <select asp-for="@Model.Products.SpecialTagsId" asp-items="Model.specialTagList" class="form-control">
+                <option value=""> Null</option>
+            </select>
         </div>
-        <br />
-        <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Create" />
-            <a asp-action="Index" class="btn btn-success">Back to List</a>
+    </div>
+        <div>
+    <span asp-validation-for="Products.SpecialTagsId" class="text-danger"></span>
+    </div>
+    
+    <div class="form-group row">
+        <div class="col-2">
+            <label asp-for="Products.ShadeColor"></label>
         </div>
+        <div class="col-5">
+            <input asp-for="Products.ShadeColor" class="form-control" />
+        </div>
+        <span asp-validation-for="Products.ShadeColor" class="text-danger"></span>
+    </div>
+    <div class="form-group row">
+        <div class="col-2">
+            <label asp-for="Products.Available"></label>
+        </div>
+        <div class="col-5">
+            <input type="checkbox" asp-for="Products.Available" />
+        </div>
+    </div>
+    <br />
+    <div class="form-group">
+        <input type="submit" class="btn btn-primary" value="Create" />
+        <a asp-action="Index" class="btn btn-success">Back to List</a>
+    </div>
     </div>
 </form>
 
